Gradle 8.9 & Spring Boot 3.3.2